Jumping image fix

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -43,6 +43,8 @@ main {
 
 #animated-text-container {
   white-space: pre-wrap;
+  max-width: 600px; 
+  height: 172px; 
 }
 
 .btn {
